Add unit tests for action button click and inline reply.

User interaction with NotificationViewMD should fire the appropriate
callback methods defined in MessageViewDelegate.

Especially, with the interaction in the actions row, we should fire
- ClickOnNotificationButon
- ClickOnNotificationButtonWithReply

This CL adds the following unit tests to test these callbacks.
- TestActionButtonClick
- TestInlineReply

TEST=message_center_unittests
BUG=789057

Change-Id: Iba71e1f928830071fe73a7e49feb44efe493c8dd
Reviewed-on: https://chromium-review.googlesource.com/799592
Commit-Queue: Tetsui Ohkubo <tetsui@chromium.org>
Reviewed-by: Peter Beverloo <peter@chromium.org>
Cr-Commit-Position: refs/heads/master@{#520837}
Former-commit-id: 848163c8e1950ff19c9b65900dcfd5f7e8f4a981